feat: add new water container models and update water quality components